# RetroGolf

./: CMakeLists.txt  README.md
include/RetroGolf/: ball.h  block.h  entity.h  hole.h  math.h  render.h
src/: ball.c  block.c  entity.c  hole.c  main.c  math.c  render.c
