cmake_minimum_required(VERSION 3.7)

project(RetroGolf)

file(GLOB SOURCES "src/*.c")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/RetroGolf)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/RetroGolf)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/res DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

# Find SDL2
IF(WIN32)
	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)

	set(SDL2_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/" CACHE BOOL "" FORCE)
	set(SDL2_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/" CACHE BOOL "" FORCE)
	set(SDL2_TTF_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/" CACHE BOOL "" FORCE)
	set(SDL2_MIXER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/" CACHE BOOL "" FORCE)

	set(SDL2_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/SDL2" CACHE BOOL "" FORCE)
	set(SDL2_IMAGE_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/SDL2" CACHE BOOL "" FORCE)
	set(SDL2_TTF_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/SDL2" CACHE BOOL "" FORCE)
	set(SDL2_MIXER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/SDL2" CACHE BOOL "" FORCE)
	
	file(GLOB DLL "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.dll")
	file(COPY ${DLL} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build)
ENDIF()

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)

add_executable(${PROJECT_NAME} ${SOURCES})

target_link_libraries(${PROJECT_NAME} SDL2::Main SDL2::Image SDL2::TTF SDL2::Mixer)

